--- a/index.html
+++ b/index.html
@@ -43,8 +43,18 @@
       <h1 class="cabeçalho__titulo">
         <b class="cabeçalho__titulo-negrito">Alura</b>Books
       </h1>
-
     </div>
+
+    <ul class="opcoes">
+      <li class="opcoes__item">Categorias</li>
+      <li class="opcoes__item">
+        <a href="#" class="opcoes__link">Favoritos</a>
+      </li>
+      <li class="opcoes__item">
+        <a href="#" class="opcoes__link">Minha estante</a>
+      </li>
+    </ul>
+
     <div class="container">
       <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
       <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
