--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
     </div>
 
     <ul class="opcoes">
+      <input type="checkbox" id="lista-menu" class="opcoes__botao">
+      <label for="lusta-menu"></label>
+      <li class="lista-menu__item">
+        <a href="#" class="lista-menu__link">Programação</a>
+      </li>
+      <li class="lista-menu__item">
+        <a href="#" class="lista-menu__link">Front-end</a>
+      </li>
+      <li class="lista-menu__item">
+        <a href="#" class="lista-menu__link">Infraestrutura</a>
+      </li>
+      <li class="lista-menu__item">
+        <a href="#" class="lista-menu__link">Business</a>
+      </li>
+      <li class="lista-menu__item">
+        <a href="#" class="lista-menu__link">Design & UX</a>
+      </li>
+
       <li class="opcoes__item">Categorias</li>
       <li class="opcoes__item">
         <a href="#" class="opcoes__link">Favoritos</a>
