--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <ul class="opcoes">
       <input type="checkbox" id="lista-menu" class="opcoes__botao">
-      <label for="lusta-menu"></label>
+      <label for="lista-menu"></label>
       <li class="lista-menu__item">
         <a href="#" class="lista-menu__link">Programação</a>
       </li>
