--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 
     <ul class="opcoes">
       <input type="checkbox" id="lista-menu" class="opcoes__botao">
-      <label for="lista-menu"></label>
+      <label for="lista-menu">
+        <li class="opcoes__item">Categorias</li>
+      </label>
       <li class="lista-menu__item">
         <a href="#" class="lista-menu__link">Programação</a>
       </li>
