--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
       </ul>
       <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
       <h1 class="cabeçalho__titulo">
-        <b class="cabeçalho__titulo-negrito">Alura</b>Books
-      </h1>
+        <b class="cabeçalho__titulo-negrito">Alura</b>Books</h1>
     </div>
 
     <ul class="opcoes">
@@ -50,29 +49,15 @@
       <label for="lista-menu">
         <li class="opcoes__item">Categorias</li>
       </label>
-      <li class="lista-menu__item">
-        <a href="#" class="lista-menu__link">Programação</a>
-      </li>
-      <li class="lista-menu__item">
-        <a href="#" class="lista-menu__link">Front-end</a>
-      </li>
-      <li class="lista-menu__item">
-        <a href="#" class="lista-menu__link">Infraestrutura</a>
-      </li>
-      <li class="lista-menu__item">
-        <a href="#" class="lista-menu__link">Business</a>
-      </li>
-      <li class="lista-menu__item">
-        <a href="#" class="lista-menu__link">Design & UX</a>
-      </li>
+      <li class="lista-menu__item"><a href="#" class="lista-menu__link">Programação</a></li>
+      <li class="lista-menu__item"><a href="#" class="lista-menu__link">Front-end</a></li>
+      <li class="lista-menu__item"><a href="#" class="lista-menu__link">Infraestrutura</a></li>
+      <li class="lista-menu__item"><a href="#" class="lista-menu__link">Business</a></li>
+      <li class="lista-menu__item"><a href="#" class="lista-menu__link">Design & UX</a></li>
 
       <li class="opcoes__item">Categorias</li>
-      <li class="opcoes__item">
-        <a href="#" class="opcoes__link">Favoritos</a>
-      </li>
-      <li class="opcoes__item">
-        <a href="#" class="opcoes__link">Minha estante</a>
-      </li>
+      <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+      <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
     </ul>
 
     <div class="container">
