--- a/index.html
+++ b/index.html
@@ -215,9 +215,11 @@
   </section>
 
   <section class="contato">
+    <div class="contato__descricao">
     <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
     <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
-    <input type="email" placeholder="Cadastre seu email" class="contato__email">
+    </div>
+  <input type="email" placeholder="Cadastre seu email" class="contato__email">
   </section>
 
   <hr/>
