--- a/index.html
+++ b/index.html
@@ -226,6 +226,81 @@
 
 <footer class="rodape">
   <h2 class="rodape__titulo">Grupo Alura</h2>
+  <ul class="lista-rodape">
+    <li class="lista-rodape__titulo">Educação</li>
+    <li class="lista-rodape__item">
+      <img src="img/CasaDoCodigo.svg" alt="logo casa do código">
+      <a href="#" class="lista-rodape__link">Casa do código</a>
+    </li>
+        <li class="lista-rodape__item">
+      <img src="img/Caelum.svg" alt="logo casa do caelum">
+      <a href="#" class="lista-rodape__link">Caelum</a>
+    </li>
+  </ul>
+
+  <ul class="lista-rodape">
+    <li class="lista-rodape__titulo">Educação online</li>
+    <li class="lista-rodape__item">
+      <img src="img/Alura.svg" alt="logo da alura">
+      <a href="#" class="lista-rodape__link">Alura</a>
+    </li>
+       <li class="lista-rodape__item">
+      <img src="img/AluraEmpresas.svg" alt="logo da alura para empresas">
+      <a href="#" class="lista-rodape__link">Alura para Empresas</a>
+    </li>
+    <li class="lista-rodape__item">
+      <img src="img/AluraLATAM.svg" alt="logo da alura LATAM">
+      <a href="#" class="lista-rodape__link">Alura LATAM</a>
+    </li>
+    <li class="lista-rodape__item">
+      <img src="img/AluraStart.svg" alt="logo da alura Start">
+      <a href="#" class="lista-rodape__link">Alura Start</a>
+    </li>
+    <li class="lista-rodape__item">
+      <img src="img/MusicDot.svg" alt="logo da MusicDot">
+      <a href="#" class="lista-rodape__link">MusicDot</a>
+    </li>
+    <li class="lista-rodape__item">
+      <img src="img/AluraLingua.svg" alt="logo da alura língua">
+      <a href="#" class="lista-rodape__link">Alura Língua</a>
+    </li>
+    <li class="lista-rodape__item">
+      <img src="img/PM3.svg" alt="logo da PM3">
+      <a href="#" class="lista-rodape__link">PM3</a>
+    </li>
+  </ul>
+  
+  <ul class="lista-rodape">
+    <li class="lista-rodape__titulo">Comunidade</li>
+    <li class="lista-rodape__item">
+      <img src="img/HipstersTech.svg" alt="logo da hipsterstech">
+      <a href="#" class="lista-rodape__link">HipstersTech</a>
+    </li>
+       <li class="lista-rodape__item">
+      <img src="img/ScubaDev.svg" alt="logo da ScubaDev">
+      <a href="#" class="lista-rodape__link">ScubaDev</a>
+    </li>
+    <li class="lista-rodape__item">
+      <img src="img/LayersTech.svg" alt="logo da LayersTech">
+      <a href="#" class="lista-rodape__link">LayersTech</a>
+    </li>
+    <li class="lista-rodape__item">
+      <img src="img/LikeABoss.svg" alt="logo da LikeABoss">
+      <a href="#" class="lista-rodape__link">LikeABoss</a>
+    </li>
+    <li class="lista-rodape__item">
+      <img src="img/CarreiraSemFronteira.svg" alt="logo da Carreira Sem Fronteira">
+      <a href="#" class="lista-rodape__link">CarreiraSemFronteira</a>
+    </li>
+    <li class="lista-rodape__item">
+      <img src="img/HipstersJobs.svg" alt="logo da HipstersJobs">
+      <a href="#" class="lista-rodape__link">HipstersJobs</a>
+    </li>
+    <li class="lista-rodape__item">
+      <img src="img/GUJ.svg" alt="logo da GUJ">
+      <a href="#" class="lista-rodape__link">GUJ</a>
+    </li>
+  </ul>
 
   </footer>
 
