--- a/index.html
+++ b/index.html
@@ -62,9 +62,14 @@
     </ul>
 
     <div class="container">
-      <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente"></a>
-      <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
-      <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+      <a href="#">
+        <img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente"></a>
+      <a href="#">
+        <img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
+        <p class="container__texto">Minha sacola</p>
+      <a href="#">
+        <img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+        <p class="container__texto">Meu perfil</p>
     </div>
   </header>
 
