--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
   <section class="carrossel">
     <h2 class="carrossel__titulo">Novos lançamentos</h2>
     <!-- Slider main container -->
+     <div class="carrossel__container">
     <div class="swiper">
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
@@ -132,7 +133,8 @@
         <a href="#" class="botões__ancora">Saiba mais</a>
       </div>
     </div>
-
+  </div>
+  
   </section>
 
   <section class=”carrossel”>
