--- a/index.html
+++ b/index.html
@@ -134,11 +134,12 @@
       </div>
     </div>
   </div>
-  
+
   </section>
 
   <section class=”carrossel”>
     <h2 class="carrossel__titulo">Mais vendidos</h2>
+    <div class="carrossel__container">
     <div class="swiper">
       <!-- Additional required wrapper -->
       <!-- If we need pagination -->
@@ -188,7 +189,8 @@
         <a href="#" class="botões__ancora">Saiba mais</a>
       </div>
     </div>
-
+  </div>
+  
     <section class="topicos">
       <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
       <ul class="topicos__lista">
