--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <ul class="opcoes">
       <input type="checkbox" id="lista-menu" class="opcoes__botao">
-      <label for="lista-menu">
+      <label for="lista-menu" class="opcoes__rotulo">
         <li class="opcoes__item">Categorias</li>
       </label>
       <ul class="lista-menu">
